hwbi/disc/css/mainstyle.css
/* ... */
input[type="range"]:focus::-webkit-slider-thumb {
  background: #0071bc;
  /** Workaround for semi transparent border. */
  border-width: 0;
  box-shadow: 0px 0px 0px 0.5rem rgba(33, 150, 243, 0.5);
}
input[type="range"]::-moz-range-thumb {
  height: 1rem;
  width: 1rem;
  border: .25rem solid #0071bc;
  border-radius: 50%;
  background: #0071bc;
  cursor: pointer;
  transition: all .3s;
  box-sizing: border-box;
}
input[type="range"]:focus::-moz-range-thumb {
  background: #0071bc;
  /** Workaround for semi transparent border. */
  border-width: 0;
  box-shadow: 0px 0px 0px 0.5rem rgba(33, 150, 243, 0.5);
}
input[type="range"]::-ms-thumb {
  height: 1rem;
  width: 1rem;
  border: .25rem solid #0071bc;
  border-radius: 50%;
  background: #0071bc;
  cursor: pointer;
  transition: all .3s;
  box-sizing: border-box;
  transform: translateY(calc(.5rem - 50%));
}
input[type="range"]:focus::-ms-thumb {
  background: #0071bc;
  /** Workaround for semi transparent border. */
  border-width: 0;
  box-shadow: 0px 0px 0px 0.5rem rgba(33, 150, 243, 0.5);
}

.thumb {
  display: block;
}

.accordion-metrics {
  background-color: white;
  color: black;
  cursor: pointer;
  /* padding: 18px; */
  width: 100%;
  text-align: left;
  border: none;
  outline: none;
  transition: 0.4s;
  margin: .5em 0 !important;
}

.active-metric, .accordion-metrics:hover {
  background-color: #ccc !important;
}

.accordion-metrics:focus {
  background-color: white;
}

.metric-accordion-panel {
  padding: 0 18px;
  background-color: white;
  display: none;
  overflow: hidden;
  text-align: left;
}

.metric-accordion-panel div {
  padding: 2% 0;
}

.metric-accordion-panel h4 {
  font-size: 90%;
  padding: 15px 0 0.5em;
}

.metric-accordion-panel hr {
  margin: 0 0 1em;
  background: #aaa;
}

.accordion-metrics:before {
  content: '\002b';
  font-size: 20px;
  color: #777;

  margin-right: 10px;
}

.active-metric:before {
  content: '\2212';
}



/* SLINKY */
.slinky-menu {
	overflow: hidden;
  /* width: 500px; */
  /* width: 100%; */
}
.slinky-menu > ul {
	left: 0;
  position: relative;
  padding-left: 0;
}
.slinky-menu ul,
.slinky-menu li {
	list-style: none;
	margin: 0;
}
.slinky-menu ul {
	width: 100%;
}
.slinky-menu a {
	display: block;
}
.slinky-menu li ul {
	display: none;
	left: 100%;
	position: absolute;
  top: 0;
  padding-left: 0;
}

.slinky-menu a {
	background: white;
	border: none;
	color: #333;
	padding: 1em;
}
.slinky-menu a:hover {
	background: #ccc;
}
.slinky-menu a.next:after {
	content: '\276f';
	margin-left: 1em;
	float: right;
}
.slinky-menu a.back:before, .services a.back:before {
	content: '\276e';
	margin-right: 1em;
	float: left;
}

.slinky-menu a.back {
  font-weight: bold;
  line-height: 5px;
}

.container-back {
  position: relative;
  left: 12%;
  color: #777;
  display: none;
}



.filterDiv {
  display: none;
}

.domain-description > div[id*='_data-title'] {
  float: left;
  padding-right: 15px;
}

.domain-description > div[id*='-service_score_bar'] {
  margin-bottom: 5%;
  margin-left: 5%;
}

.size-1of2 {
  width: 40%;
  display: inline-block;
  text-align: left;
}

.size-2of2 {
  width: 40%;
  display: inline-block;
  text-align: left;
}

.cardimgcover {
  object-fit: cover;
}

.domain-modal-score {
  font-size: 20px;
  margin-left: 15px;
}

#service_indicator_title {
  font-family: sans-serif;
  text-align: center;
}

.chartcontainer {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-column-gap: 5%;
}

.chartdesc {
  display: none;
}

.chartdesc-container {
  margin-bottom: 10%;
  margin-top: -5%;
}

.transparent {
  opacity: 0.4;
}

#chart, #chart2, #chart3 {
  /* cursor: pointer; */
}

.description-column {
  position: fixed;
  width: 35vw !important;
  max-width: 410px;
}

#customize-resilience .indicator-column {
  width: 50% !important;
}

.indicator-column {
  float: right !important;
}

#customize-resilience h4 {
  font-family: Tahoma, Arial, sans-serif;
  color: #333;
  font-size: 2rem;
}

.service-blocks h3 {
  float: none !important;
/*   margin-bottom: 5%;
 */  margin-top: 8%;
}

.scenario-cols {
  margin: 0;
}

.modal-disc-score {
  margin-right: 10%;
  font-family: Tahoma, Arial, sans-serif;
}

div[id*='_priority_ranking'] {
  margin-top: 5%;
}

.preload {
  /* position: absolute;
  left: 50%;
  top: 50%; */
  z-index: 999;
  border: 8px solid #bebdbd;
  border-top: 8px solid #333;
  border-radius: 50%;
  width: 60px;
  height: 60px;
  animation: spin 1s linear infinite;
  margin: 0 auto;
  margin-top: 30%;
}

@-webkit-keyframes spin {
  0% { transform: rotate(0deg); }
  100% { tranform: rotate(360deg); }
}

@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}

/* #community-snapshot-tab {
  display: none;
} */

.preload-wrapper {
  position:fixed;
  top:0;
  bottom:0;
  left:0;
  right:0;
  background-color: #fff;
  z-index: 99;
}

.priorityhr {
  background: #ccc;
  margin-top: 20%;
}

#resources-tab ul li {
  list-style-type: none;
  padding-bottom: 10px;
  display: -webkit-box;
}

.resources-checkbox {
  position: unset !important;
  left: 0 !important;
}

#resources-tab h3 {
  font-size: 1.5em !important;
  padding: 0 !important;
}

#resources-tab h3:nth-child(n+3) {
  padding-top: 20px !important;
}

.labelName text {
  font-size: 12px;
}

#ranking-chart {
  float:right;
  margin-top: 5%;
}

.notab-desc {
  display: none;
}

.resources-subhead {
  padding-top: 4%;
}

input[type="checkbox"].resources-checkbox {
  margin-right:10px;
}

.sidenav div {
  position: absolute;
  bottom: 1%;
  left: 5%;
  color: #777;
  font-size: 13px;
}

#scenario-btns {
  /* display: grid; 
  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr)); */
  display: flex;
  width: 364px;
  height: 36.97px;
  float: right;
  margin-top: -10px;
  justify-content: center;
}

#scenario-btns > button {
  /* width: 100%; */
  height: 100%;
}

#reset-scenario-builder-btn {
  margin-right: 5%;
}
/* ... */

